src/components/modus-wc-alert/modus-wc-alert.scss
/**
* This component uses Tailwind CSS and DaisyUI.
* Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
*/

[data-theme='modus-classic-light'] .modus-wc-alert,
[data-theme='modus-classic-dark'] .modus-wc-alert {
  border-left-width: 12px;
  border-radius: var(--modus-wc-border-radius-md);
}

[data-theme='modus-classic-light'] .modus-wc-alert {
  color: var(--modus-wc-color-trimble-gray);

  &.modus-wc-alert-info {
    background-color: var(--modus-wc-color-blue-pale);
    border-color: var(--modus-wc-color-trimble-blue);
  }

  &.modus-wc-alert-error {
    background-color: var(--modus-wc-color-red-pale);
    border-color: var(--modus-wc-color-red);
  }

  &.modus-wc-alert-success {
    background-color: var(--modus-wc-color-green-pale);
    border-color: var(--modus-wc-color-green);
  }

  &.modus-wc-alert-warning {
    background-color: var(--modus-wc-color-yellow-pale);
    border-color: var(--modus-wc-color-yellow-dark);
  }
}

[data-theme='modus-classic-dark'] .modus-wc-alert {
  &.modus-wc-alert-info {
    background-color: var(--modus-wc-color-blue-light);
    border-color: var(--modus-wc-color-highlight-blue);
  }

  &.modus-wc-alert-error {
    background-color: var(--modus-wc-color-red-light);
    border-color: var(--modus-wc-color-red);
  }

  &.modus-wc-alert-success {
    background-color: var(--modus-wc-color-green-light);
    border-color: var(--modus-wc-color-green);
  }

  &.modus-wc-alert-warning {
    background-color: var(--modus-wc-color-yellow-light);
    border-color: var(--modus-wc-color-yellow-dark);
  }
}

